- Away is displayed when switching automatically to Away-mode due to inactivity, and also when manually switching to this mode
- Status mode is now displayed on receiving side (after status message)
- Change some shortcuts:
 - CTRL+H/Y and CTRL+Shift+H/Y to increase/decrease voice and media files volume of an user
 - CTRL+Shife+E to send a broadcast message
 - CTRL+Alt+B to kick and ban

Version 5.6, 2020/08/04
Accessible Windows client
- Removed duplex mode for sound devices
- Removed Windows Sound system
- Removed Advanced page from Preferences
- Default sound system, Windows Audio Session, now uses Windows' own echo cancellor, AGC and noise suppression
- User accounts are now sorted alphabetically
- Text message log files are stored with .clog and .ulog extension for channel and user log respectively
- Blank nicknames are set to NoName followed by user ID
- More items are now translatable.
- French, Turkish, German and Chinese languages updated.
- All areas of main window are now labelled
- Slider controls now use down arrow to decrease volume and up arrow to increase volume
- TTS announces volume changes when using shortcut keys Ctrl+Alt+Left/Right and Ctrl+Shift+Left/Right
- When in main channel the application title is now server name
- Blank characters are automatically removed from username and channel name
- Who has removed a file is now announce
Default Qt client
- Removed duplex mode for sound devices
- Sound system Windows Audio Session now uses Windows' own echo cancellor, AGC and noise suppression
- Text message log files are stored with .clog and .ulog extension for channel and user log respectively
- Press tab changes focus in text message dialog
- More items are translatable
- More controls are labelled with accessibility hints
- Blank nicknames are set to NoName followed by user ID
- When in main channel the application title is now server name
- Blank characters are automatically removed from username and channel name