@@ -182,6 +182,56 @@
            </layout>
           </item>
           <item>
+           <layout class="QHBoxLayout" name="horizontalLayout_2">
+            <item>
+             <widget class="QLabel" name="label_2">
+              <property name="text">
+               <string>Set away status after</string>
+              </property>
+              <property name="buddy">
+               <cstring>awaySpinBox</cstring>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QSpinBox" name="awaySpinBox">
+              <property name="maximum">
+               <number>3600</number>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLabel" name="label_3">
+              <property name="text">
+               <string>seconds of inactivity (0 means disabled)</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="horizontalSpacer_2">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="groupBox_10">
+         <property name="title">
+          <string>BearWare.dk Web Login</string>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout_12">
+          <item>
            <layout class="QHBoxLayout" name="horizontalLayout_22">
             <item>
              <widget class="QLabel" name="label_35">
@@ -223,45 +273,11 @@
            </layout>
           </item>
           <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_2">
-            <item>
-             <widget class="QLabel" name="label_2">
-              <property name="text">
-               <string>Set away status after</string>
-              </property>
-              <property name="buddy">
-               <cstring>awaySpinBox</cstring>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QSpinBox" name="awaySpinBox">
-              <property name="maximum">
-               <number>3600</number>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLabel" name="label_3">
-              <property name="text">
-               <string>seconds of inactivity (0 means disabled)</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <spacer name="horizontalSpacer_2">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-           </layout>
+           <widget class="QCheckBox" name="syncWebUserCheckBox">
+            <property name="text">
+             <string>Restore volume settings and subscriptions on login for Web Login users</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -1994,9 +2010,10 @@
   <tabstop>nicknameEdit</tabstop>
   <tabstop>maleRadioButton</tabstop>
   <tabstop>femaleRadioButton</tabstop>
+  <tabstop>awaySpinBox</tabstop>
   <tabstop>bearwareidEdit</tabstop>
   <tabstop>setupBearWareLoginButton</tabstop>
-  <tabstop>awaySpinBox</tabstop>
+  <tabstop>syncWebUserCheckBox</tabstop>
   <tabstop>pttChkBox</tabstop>
   <tabstop>setupkeysButton</tabstop>
   <tabstop>voiceactChkBox</tabstop>
@@ -2104,6 +2121,7 @@
   <tabstop>viddefaultButton</tabstop>
  </tabstops>
  <resources>
+  <include location="resources.qrc"/>
   <include location="resources.qrc"/>
  </resources>
  <connections>
