@@ -36,6 +36,8 @@
 #define SETTINGS_GENERAL_GENDER_DEFAULT             true
 #define SETTINGS_GENERAL_BEARWARE_USERNAME          "general_/bearwareid"
 #define SETTINGS_GENERAL_BEARWARE_TOKEN             "general_/bearwaretoken"
+#define SETTINGS_GENERAL_RESTOREUSERSETTINGS        "general_/restore-user-settings"
+#define SETTINGS_GENERAL_RESTOREUSERSETTINGS_DEFAULT true
 #define SETTINGS_GENERAL_AUTOAWAY                   "general_/auto-away"
 #define SETTINGS_GENERAL_PUSHTOTALK                 "general_/push-to-talk"
 #define SETTINGS_GENERAL_PUSHTOTALK_KEY             "general_/ptt-key"
